removed archives/@enabled; fixes #26361